hphp/hack/test/typecheck/constraints/contravariance_constraint_bad_2.php.exp
File "contravariance_constraint_bad_2.php", line 39, characters 7-55:
Invalid argument (Typing[4110])
  File "contravariance_constraint_bad_2.php", line 39, characters 16-18:
  This is an object of type NAC\AAA
  File "contravariance_constraint_bad_2.php", line 36, characters 16-18:
  It is incompatible with an object of type NAC\BBB
